<resources>
    <string name="app_name">StopLaunch</string>
    <string name="minimum_requirements">Minimum Requirements</string>
    <string name="recommended_requirements">Recommended Requirements</string>
    <string name="can_you_run_it">Can you run it ?</string>
    <!-- <string name="native_bottom_ad">ca-app-pub-1544435087195516/8447157548</string>-->
    <string name="can_u_run_it_ad">ca-app-pub-1544435087195516/3626551024</string>
    <string name="game_content_bottom_ad">ca-app-pub-1544435087195516/1906811682</string>
    <string name="blog_content_bottom_ad">ca-app-pub-1544435087195516~7128952583</string>

    <string name="save">Save</string>
    <string name="title_activity_tabbed_main">TabbedMainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
