<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_requirement_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gamerequirements.Requirements.Requirement_content"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center_vertical"
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <ImageView
        android:gravity="center_vertical"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="10sp"
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:tint="@color/plainWhite"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/BackGroundColor"
        android:textSize="18sp"
        android:paddingBottom="2sp"/>

     <ImageView
          android:id="@+id/Settings"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_alignParentRight="true"
          android:layout_gravity="end"
          android:layout_marginEnd="16dp"
          android:layout_marginRight="16dp"
          android:src="@drawable/ic_settings"
          android:tint="@color/plainWhite" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:descendantFocusability="blocksDescendants">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                >

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:gravity="center"
                  >

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="110sp"
                        android:layout_height="154sp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_weight="7"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginEnd="5sp"
                    >

                    <TextView
                        android:id="@+id/game_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp"
                        android:textColor="#2c3e50"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp"
                        android:textColor="@color/whitedark1"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp"
                        android:textColor="@color/whitedark1"
                        android:textSize="15sp"/>

                    <Button
                        android:background="@drawable/buttonshape"
                        android:textColor="@color/plainWhite"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:onClick="canYouRunIt"
                        android:text="@string/can_you_run_it"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="13sp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"/>

                </LinearLayout>


            </LinearLayout>



            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/whitedark1"
                android:layout_margin="7dp"
                />

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewContentBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/game_content_bottom_ad">
            </com.google.android.gms.ads.AdView>

            <TextView
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/whitedark1"

                android:gravity="start"
                />




            <LinearLayout
                android:id="@+id/MinimumLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:paddingBottom="3sp"
                    android:paddingEnd="3sp"
                    android:paddingStart="3sp"
                    android:paddingTop="3sp"
                    android:layout_marginBottom="7sp"
                    android:text="@string/minimum_requirements"
                    android:textAlignment="center"
                    android:textColor="#ECEFF1"
                    android:textSize="@dimen/HeadingFont"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/HEADING_intelCPU"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/CONTENT_intelCPU"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/HEADING_AMD_CPU"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/CONTENT_AMD_CPU"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/HEADING_NvidiaGPU"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/CONTENT_NvidiaGPU"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/HEADING_AMDGpu"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/CONTENT_AMDGpu"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/HEADING_VRAM"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/CONTENT_VRAM"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/HEADING_RAM"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/CONTENT_RAM"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/HEADING_OS"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/CONTENT_OS"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/HEADING_HDD"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/CONTENT_HDD"
                        layout="@layout/content_textview"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/RecommendedLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@color/colorPrimary"
                    android:paddingBottom="3sp"
                    android:paddingEnd="3sp"
                    android:paddingStart="3sp"
                    android:paddingTop="3sp"
                    android:layout_marginBottom="7sp"
                    android:text="@string/recommended_requirements"
                    android:textAlignment="center"
                    android:textColor="#ECEFF1"
                    android:textSize="@dimen/HeadingFont"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/RHEADING_intelCPU"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/RCONTENT_intelCPU"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/RHEADING_AMD_CPU"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/RCONTENT_AMD_CPU"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/RHEADING_NvidiaGPU"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/RCONTENT_NvidiaGPU"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/RHEADING_AMDGpu"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/RCONTENT_AMDGpu"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/RHEADING_VRAM"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/RCONTENT_VRAM"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/RHEADING_RAM"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/RCONTENT_RAM"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/RHEADING_OS"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/RCONTENT_OS"
                        layout="@layout/content_textview"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/RHEADING_HDD"
                        layout="@layout/heading_textview"
                        />

                    <include
                        android:id="@+id/RCONTENT_HDD"
                        layout="@layout/content_textview"/>

                </LinearLayout>


            </LinearLayout>

         <!--   <Button
                android:background="#03A9F4"
                android:textColor="@color/plainWhite"
                android:id="@+id/canYouRunIt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="canYouRunIt"
                android:layout_marginStart="10dp"
                android:text="@string/can_you_run_it"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"/> -->




        </LinearLayout>


    </ScrollView>

</LinearLayout>
